Fix overlap of team section

--- a/main.css
+++ b/main.css
@@ -82,8 +82,10 @@ h1
   font-family: 'Montserrat';
   max-width: 100%;
   width: 100%;
+  /*
   height: 95vh;
   min-height: 95vh;
+  */
 }
 #team-title{
   padding-top: 3%;
@@ -115,6 +117,10 @@ a.custom-card:hover {
 }
 
 /*Channel*/
+#channel-title{
+  padding-top:3%;
+}
+
 #channel{
   font-family: 'Montserrat';
   background-color: #F8F9F9;
